--- a/pgserver.conf
+++ b/pgserver.conf
@@ -13,43 +13,50 @@
 # port (in decimal) to listen for incoming connections
 # for those interested in seeing a current snapshot
 # of system statistics (default=32902)
-# StatsPort=
+# StatsPort =
 
 # timeout in ms the accept stats thread idles in a select
 # waiting for a connection. It then checks for the kill 
 # event and returns listening again. If the kill event is set
 # the thread exits (default=1000)
-# AcceptStatsThreadTimeout
+#AcceptStatsThreadTimeout = 
 
 # port (in decimal) to listen for incoming connections
 # for the client software (default=32903)
-# ClientPort=
+# ClientPort =
 
 # timeout in ms the accept client thread idles in a select
 # waiting for a connection. It then checks for the kill
 # event and returns listening again. If the kill event is set
 # the thread exits. (default=1000)
-#AcceptClientThreadTimeout=
+#AcceptClientThreadTimeout =
 
 # maximum number of client connections allowed 
 # per ip address (default=5)
-MaxSameIPConnections=20000
+MaxConnectionsPerIP = 20000
 
 # All accepted connections are logged to syslog.
 # Settings this to 'yes' will also log the clients
 # hostname. This is an option because it causes
 # a performance hit (default=no)
-LogClientName=yes
+LogClientName = yes   
 
 # Number of work threads servicing the login
-# and communication queues (default=10)
-# This may need tweaking depending on the
-# intended load
-WorkPoolSize=5
+# queue (default=5)
+LoginQThreads = 1
+
+# Number of work threads servicing the comm
+# queue (default=10)
+CommQThreads = 1
 
 # Time in milliseconds a work thread idles
 # between polling the queues. This gives
 # breathing room for context switches,
 # affecting cpu usage (default=1000)
-WorkIdle=250
+WorkIdleTime = 0
 
+# Time in milliseconds a work thread waits for
+# an item to be inserted into a queue before it moves
+# on and checks the next queue. Value of 0 waits forever
+# (default=1000)
+TriggerTimeout = 0
